# Arduino_Examples

01-Semaphore/: CMakeLists.txt  context.cpp  context.h  lights.cpp  lights.h  main.cpp  state.h
01-Semaphore/states/: green_state.cpp  green_state.h  red_state.cpp  red_state.h  yellow_state.cpp  yellow_state.h
Arduino/: Projetos  projetos_arduino
Arduino/Buttons/: .project  Music.cpp
Arduino/Led_Display/: .project  Led_Display.cpp
Arduino/Led_Lights/: .cproject  .project  Led_Lights.cpp  MultiFuncShield.h
Arduino/Music/: .project  Buttons.cpp
Arduino/Preset_Pot/: .cproject  .project  Preset_Pot.cpp
Arduino/RoverTank/: .cproject  .project  RoverMain.cpp  rover_hw.cpp  rover_tank.cpp
Arduino/RoverTank/include/: rover_hw.h  rover_tank.h  rover_tank_types.h
Arduino/WaterLevelIndicatorTankStatus/: .cproject  .project  WaterLevelIndicatorTankStatus.cpp
Asteroids/: .cproject  .project  Asteroids.cpp
Communication/: .cproject  .project  Communication.cpp
Semaforo/: .cproject  .project  Semaforo.cpp
Semaphore/: .cproject  .project  communication.cpp  communication.h  green_state.cpp  green_state.h  main.cpp  red_state.cpp  red_state.h  state.h  traffic.cpp  traffic.h  traffic_light.cpp  traffic_light.h  yellow_state.cpp  yellow_state.h
Semaphore/docs/: semaphore.drawio
SerialRecv/: .cproject  .project  SerialRecv.cpp
Servo4Motors/: .project  ServoMotor.cpp
ServoMotor/: .cproject  .project  ServoMotor.cpp
ServoSample/: .cproject  .project  ServoSample.cpp
SpaceShip/: .cproject  .project  main.cpp
SpaceShip/Debug/: SpaceShip  makefile
(+7 files in other folders)
